infrastructure/gatewayclass.yml
apiVersion: 	gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: gateway-class
spec:
  controllerName: istio.io/gateway-controller
