infrastructure/dotnet_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-deployment
  namespace: mediapipeline
spec:
  minReadySeconds: 10
  replicas: 2
  selector:
    matchLabels:
      app: dotnet-service
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: dotnet-service
    spec:
      containers:
        - command: ["dotnet", "dotnetservice.dll"]
          image: mediapipeline_dotnetservice:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              httpHeaders:
                - name: Content-Type
                  value: application/json
              path: /livez
              port: 80
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 15 
          name: goservice
          ports:
            - containerPort: 80
              protocol: TCP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              httpHeaders:
                - name: Content-Type
                  value: application/json
              path: /readyz
              port: 80
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 3
            timeoutSeconds: 15
          resources:
            limits:
              memory: 500Mi
              cpu: 2
            requests:
              memory: 250Mi
              cpu: 1
