infrastructure/go_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-deployment
  namespace: mediapipeline
spec:
  minReadySeconds: 10
  replicas: 2
  selector:
    matchLabels:
      app: go-service
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxSurge: 50%
      maxUnavailable: 50%
  template:
    metadata:
      labels:
        app: go-service
    spec:
      containers:
        - command: ["/app/goservice"]
          image: mediapipeline_goservice:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            httpGet:
              httpHeaders:
                - name: Content-Type
                  value: application/json
              path: /api/v1/infra/livez
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 15 
          name: goservice
          ports:
            - containerPort: 8080
              protocol: TCP
          readinessProbe:
            failureThreshold: 5
            httpGet:
              httpHeaders:
                - name: Content-Type
                  value: application/json
              path: /api/v1/infra/readyz
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 3
            timeoutSeconds: 15
          resources:
            limits:
              memory: 500Mi
              cpu: 2
            requests:
              memory: 250Mi
              cpu: 1
