infrastructure/psql_service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: mediapipeline
  name: psql-service
spec:
  ports:
    - name: psql-port
      protocol: TCP
      port: 5432
      appProtocol: tcp
      targetPort: 5432
  selector:
    svc: postgresql
  type: ClusterIP
  clusterIP: None
