infrastructure/gatewayapi.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-api
  namespace: mediapipeline
spec:
  gatewayClassName: gateway-class
  listeners:
    - name: rest-listener
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
