infrastructure/dotnet_httplistener.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dotnet-httplistener
  namespace: mediapipeline
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: mediapipeline
      name: gateway-api
      sectionName: rest-listener
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/user/
      backendRefs:
        - kind: Service
          name: dotnet-service
          namespace: mediapipeline
          port: 80
